Add one picture

--- a/BTM_Qt/res_file.qrc
+++ b/BTM_Qt/res_file.qrc
@@ -197,5 +197,6 @@
         <file>images/Mathias Lessort.png</file>
         <file>images/Edwin Jackson.png</file>
         <file>images/I-Stock-Basketball-Court.jpg</file>
+        <file>images/Reggie Miller.png</file>
     </qresource>
 </RCC>
