Added a new button save to be clicked by the user
- When it is clicked, the game shows a massage(bgcolor of the message needs to be changed)
- Everything works fine with the save and resume

--- a/BTM_Qt/mainwindow.ui
+++ b/BTM_Qt/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>947</width>
-    <height>608</height>
+    <height>569</height>
    </rect>
   </property>
   <property name="palette">
@@ -438,30 +438,29 @@
    <string notr="true">background-image: url(:/images/images/basketball3.jpg);</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QGridLayout" name="gridLayout"/>
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>439</x>
-      <y>450</y>
+      <x>402</x>
+      <y>460</y>
       <width>91</width>
-      <height>32</height>
+      <height>24</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">background-image: url(:/images/images/white background image.png);</string>
     </property>
     <property name="text">
-     <string>Team Infor</string>
+     <string>League Info</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>586</x>
-      <y>450</y>
-      <width>101</width>
-      <height>32</height>
+      <x>680</x>
+      <y>460</y>
+      <width>91</width>
+      <height>24</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -474,10 +473,10 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>295</x>
-      <y>450</y>
+      <x>271</x>
+      <y>460</y>
       <width>91</width>
-      <height>32</height>
+      <height>24</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -956,9 +955,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>450</y>
-      <width>91</width>
-      <height>32</height>
+      <y>460</y>
+      <width>75</width>
+      <height>24</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -971,10 +970,10 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>450</y>
-      <width>91</width>
-      <height>32</height>
+      <x>141</x>
+      <y>460</y>
+      <width>81</width>
+      <height>24</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -9834,8 +9833,8 @@
      <rect>
       <x>600</x>
       <y>10</y>
-      <width>321</width>
-      <height>441</height>
+      <width>190</width>
+      <height>431</height>
      </rect>
     </property>
     <property name="minimumSize">
@@ -9990,137 +9989,6 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>150</y>
-      <width>571</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="image_5">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="image_6">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="image_7">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="image_8">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>571</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <widget class="QLabel" name="image_1">
-       <property name="styleSheet">
-        <string notr="true"/>
-       </property>
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="image_2">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="image_3">
-       <property name="text">
-        <string>  TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="image_4">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-    <zorder>image_1</zorder>
-    <zorder>image_3</zorder>
-    <zorder>image_2</zorder>
-    <zorder>image_4</zorder>
-   </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>300</y>
-      <width>571</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
-     <item>
-      <widget class="QLabel" name="image_9">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="image_10">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="image_11">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="image_12">
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-    <zorder>image_12</zorder>
-    <zorder>image_11</zorder>
-    <zorder>image_10</zorder>
-    <zorder>image_9</zorder>
-   </widget>
    <widget class="QLabel" name="label_9">
     <property name="enabled">
      <bool>true</bool>
@@ -10129,8 +9997,8 @@
      <rect>
       <x>20</x>
       <y>390</y>
-      <width>111</width>
-      <height>20</height>
+      <width>54</width>
+      <height>19</height>
      </rect>
     </property>
     <property name="palette">
@@ -10565,7 +10433,7 @@
       <x>156</x>
       <y>99</y>
       <width>141</width>
-      <height>20</height>
+      <height>19</height>
      </rect>
     </property>
     <property name="palette">
@@ -11429,6 +11297,181 @@
      <string>Pos2</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_6">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>460</y>
+      <width>91</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/images/images/white background image.png);</string>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_9">
+    <property name="geometry">
+     <rect>
+      <x>11</x>
+      <y>301</y>
+      <width>131</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_10">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>300</y>
+      <width>141</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_11">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>300</y>
+      <width>131</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_12">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>300</y>
+      <width>141</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_5">
+    <property name="geometry">
+     <rect>
+      <x>11</x>
+      <y>151</y>
+      <width>131</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_6">
+    <property name="geometry">
+     <rect>
+      <x>155</x>
+      <y>151</y>
+      <width>141</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_7">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>151</y>
+      <width>131</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_8">
+    <property name="geometry">
+     <rect>
+      <x>444</x>
+      <y>151</y>
+      <width>141</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_1">
+    <property name="geometry">
+     <rect>
+      <x>11</x>
+      <y>11</y>
+      <width>131</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_2">
+    <property name="geometry">
+     <rect>
+      <x>158</x>
+      <y>11</y>
+      <width>141</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_3">
+    <property name="geometry">
+     <rect>
+      <x>305</x>
+      <y>11</y>
+      <width>131</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>  TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="image_4">
+    <property name="geometry">
+     <rect>
+      <x>441</x>
+      <y>11</y>
+      <width>141</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
    <zorder>label_2p</zorder>
    <zorder>pushButton_4</zorder>
    <zorder>pushButton_5</zorder>
@@ -11481,6 +11524,7 @@
    <zorder>lcdNumber_12</zorder>
    <zorder>lcdNumber_11</zorder>
    <zorder>lcdNumber_9</zorder>
+   <zorder>pushButton_6</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QToolBar" name="mainToolBar">
