--- a/BTM_Qt/mainwindow.ui
+++ b/BTM_Qt/mainwindow.ui
@@ -9833,7 +9833,7 @@
      <rect>
       <x>600</x>
       <y>10</y>
-      <width>190</width>
+      <width>311</width>
       <height>431</height>
      </rect>
     </property>
@@ -11472,6 +11472,18 @@
      <string>TextLabel</string>
     </property>
    </widget>
+   <zorder>image_9</zorder>
+   <zorder>image_10</zorder>
+   <zorder>image_11</zorder>
+   <zorder>image_12</zorder>
+   <zorder>image_5</zorder>
+   <zorder>image_6</zorder>
+   <zorder>image_7</zorder>
+   <zorder>image_8</zorder>
+   <zorder>image_1</zorder>
+   <zorder>image_2</zorder>
+   <zorder>image_3</zorder>
+   <zorder>image_4</zorder>
    <zorder>label_2p</zorder>
    <zorder>pushButton_4</zorder>
    <zorder>pushButton_5</zorder>
@@ -11508,9 +11520,6 @@
    <zorder>line_4</zorder>
    <zorder>line_5</zorder>
    <zorder>line_6</zorder>
-   <zorder>layoutWidget</zorder>
-   <zorder>layoutWidget</zorder>
-   <zorder>layoutWidget</zorder>
    <zorder>pushButton</zorder>
    <zorder>line_7</zorder>
    <zorder>line_2</zorder>
