Added a missing picture

--- a/BTM_Qt/res_file.qrc
+++ b/BTM_Qt/res_file.qrc
@@ -198,5 +198,6 @@
         <file>images/Marc AntoinePellin.png</file>
         <file>images/Omar ElTurk.png</file>
         <file>images/Pape PhilippeAmagou.png</file>
+        <file>images/Charles Kahudi.png</file>
     </qresource>
 </RCC>
