--- a/BTM_Qt/nextgame.ui
+++ b/BTM_Qt/nextgame.ui
@@ -71,26 +71,6 @@ border: 3px solid white;
     </item>
    </layout>
   </widget>
-  <widget class="QListWidget" name="listWidget">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>130</y>
-     <width>171</width>
-     <height>341</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QListWidget" name="listWidget_2">
-   <property name="geometry">
-    <rect>
-     <x>827</x>
-     <y>140</y>
-     <width>171</width>
-     <height>341</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
@@ -282,6 +262,26 @@ border: 3px solid white;
    </property>
    <property name="text">
     <string>Quit</string>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="table_away">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>170</y>
+     <width>171</width>
+     <height>321</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="table_home">
+   <property name="geometry">
+    <rect>
+     <x>830</x>
+     <y>161</y>
+     <width>171</width>
+     <height>311</height>
+    </rect>
    </property>
   </widget>
  </widget>
