--- a/BTM_Qt/training.ui
+++ b/BTM_Qt/training.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-image: url(:/images/images/basketball3.jpg);</string>
+  </property>
   <widget class="QLCDNumber" name="lcdNumber_2">
    <property name="geometry">
     <rect>
