--- a/BTM_Qt/nextgame.ui
+++ b/BTM_Qt/nextgame.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1000</width>
-    <height>604</height>
+    <width>1200</width>
+    <height>704</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@ background-color:orange;
   <widget class="QLabel" name="quater">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>330</x>
      <y>140</y>
      <width>551</width>
      <height>41</height>
@@ -41,8 +41,8 @@ border: 3px solid white;
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>570</y>
+     <x>310</x>
+     <y>660</y>
      <width>595</width>
      <height>30</height>
     </rect>
@@ -74,7 +74,7 @@ border: 3px solid white;
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>330</x>
      <y>0</y>
      <width>551</width>
      <height>131</height>
@@ -160,8 +160,8 @@ border: 3px solid white;
   <widget class="QLabel" name="end_msg">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>510</y>
+     <x>460</x>
+     <y>590</y>
      <width>321</width>
      <height>31</height>
     </rect>
@@ -173,8 +173,8 @@ border: 3px solid white;
   <widget class="QPushButton" name="second_q">
    <property name="geometry">
     <rect>
-     <x>757</x>
-     <y>540</y>
+     <x>957</x>
+     <y>640</y>
      <width>113</width>
      <height>28</height>
     </rect>
@@ -186,8 +186,8 @@ border: 3px solid white;
   <widget class="QPushButton" name="start">
    <property name="geometry">
     <rect>
-     <x>757</x>
-     <y>510</y>
+     <x>957</x>
+     <y>610</y>
      <width>113</width>
      <height>28</height>
     </rect>
@@ -199,8 +199,8 @@ border: 3px solid white;
   <widget class="QPushButton" name="third_q">
    <property name="geometry">
     <rect>
-     <x>877</x>
-     <y>510</y>
+     <x>1077</x>
+     <y>610</y>
      <width>113</width>
      <height>28</height>
     </rect>
@@ -212,8 +212,8 @@ border: 3px solid white;
   <widget class="QPushButton" name="fourth_q">
    <property name="geometry">
     <rect>
-     <x>877</x>
-     <y>540</y>
+     <x>1077</x>
+     <y>640</y>
      <width>113</width>
      <height>28</height>
     </rect>
@@ -225,8 +225,8 @@ border: 3px solid white;
   <widget class="QPushButton" name="end_game">
    <property name="geometry">
     <rect>
-     <x>757</x>
-     <y>570</y>
+     <x>957</x>
+     <y>670</y>
      <width>113</width>
      <height>28</height>
     </rect>
@@ -238,10 +238,10 @@ border: 3px solid white;
   <widget class="QLabel" name="comments">
    <property name="geometry">
     <rect>
-     <x>194</x>
-     <y>235</y>
+     <x>294</x>
+     <y>285</y>
      <width>611</width>
-     <height>181</height>
+     <height>231</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -254,8 +254,8 @@ border: 3px solid white;
   <widget class="QPushButton" name="quit">
    <property name="geometry">
     <rect>
-     <x>877</x>
-     <y>570</y>
+     <x>1077</x>
+     <y>670</y>
      <width>113</width>
      <height>28</height>
     </rect>
@@ -268,21 +268,81 @@ border: 3px solid white;
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>170</y>
-     <width>171</width>
-     <height>321</height>
+     <y>191</y>
+     <width>231</width>
+     <height>241</height>
     </rect>
    </property>
+   <row>
+    <property name="text">
+     <string>Overall</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Attack</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Defence</string>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string>Infos</string>
+    </property>
+   </column>
   </widget>
   <widget class="QTableWidget" name="table_home">
    <property name="geometry">
     <rect>
-     <x>830</x>
-     <y>161</y>
-     <width>171</width>
-     <height>311</height>
+     <x>970</x>
+     <y>191</y>
+     <width>231</width>
+     <height>241</height>
     </rect>
    </property>
+   <row>
+    <property name="text">
+     <string>1</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>2</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>3</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>4</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>5</string>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string>Players</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Overall</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Energy</string>
+    </property>
+   </column>
   </widget>
  </widget>
  <resources/>
